# lsa

./: Cargo.toml  adjust_all_colors.nu  adjust_borders.nu  complex.json  complex.yaml  icon-theme.yaml  test.json  test.yaml
src/: config.rs  display.rs  icons.rs  main.rs  parser.rs  theme.rs  themes.rs  utils.rs  workspace.rs
