[package]
name = "lsr"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/surajssc1232/axe"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.42", features = ["derive"] }
comfy-table = "7.1.4"
inquire = "0.7"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
copypasta = "0.10"
ignore = "0.4"
