[package]
name = "lsa"
version = "0.1.7"
edition = "2024"
repository = "https://github.com/surajssc1232/lsa"
license = "MIT OR Apache-2.0"
authors = ["Suraj chauhan surajssc1232@gmail.com"]
include = ["src/**","Cargo.toml","README.md","LICENSE","Cargo.lock"]
description = "A simple file listing tool"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.42", features = ["derive"] }
comfy-table = "7.1.4"
inquire = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
dirs = "5.0"
copypasta = "0.10"
ignore = "0.4"
assert_fs = "1.0"
lazy_static = "1.4"
